[gd_scene load_steps=14 format=2]

[ext_resource path="res://titlescreen/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://fonts/LuckiestGuy.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://titlescreen/play.tscn" type="PackedScene" id=3]
[ext_resource path="res://titlescreen/rules.tscn" type="PackedScene" id=4]
[ext_resource path="res://titlescreen/options.tscn" type="PackedScene" id=5]
[ext_resource path="res://titlescreen/credits.tscn" type="PackedScene" id=6]
[ext_resource path="res://fonts/Gumela.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://titlescreen/magicienv3.png" type="Texture" id=8]
[ext_resource path="res://titlescreen/audio1whv1.png" type="Texture" id=9]
[ext_resource path="res://titlescreen/sound1.gd" type="Script" id=10]
[ext_resource path="res://titlescreen/fit-to-width-256.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 7 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 39.0
margin_top = 35.0
margin_right = 654.0
margin_bottom = 361.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="titleCt" type="VBoxContainer" parent="Menu"]
margin_right = 615.0
margin_bottom = 61.0
alignment = 1

[node name="Title" type="Label" parent="Menu/titleCt"]
margin_right = 615.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.694118, 0.360784, 0.0901961, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 5
text = "LABYRINTHS MASTER"
align = 1

[node name="otherParts" type="HBoxContainer" parent="Menu"]
margin_top = 65.0
margin_right = 615.0
margin_bottom = 328.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonsList" type="HBoxContainer" parent="Menu/otherParts"]
margin_right = 305.0
margin_bottom = 263.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ls" type="VBoxContainer" parent="Menu/otherParts/ButtonsList"]
margin_right = 305.0
margin_bottom = 263.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="Menu/otherParts/ButtonsList/ls"]
margin_right = 305.0
margin_bottom = 14.0

[node name="play" parent="Menu/otherParts/ButtonsList/ls" instance=ExtResource( 3 )]
margin_top = 18.0
margin_right = 305.0
margin_bottom = 55.0
size_flags_horizontal = 3
script = null

[node name="rules" parent="Menu/otherParts/ButtonsList/ls" instance=ExtResource( 4 )]
margin_top = 59.0
margin_right = 305.0
margin_bottom = 96.0
size_flags_horizontal = 3
script = null

[node name="options" parent="Menu/otherParts/ButtonsList/ls" instance=ExtResource( 5 )]
margin_right = 305.0
margin_bottom = 137.0

[node name="credits" parent="Menu/otherParts/ButtonsList/ls" instance=ExtResource( 6 )]
margin_top = 141.0
margin_right = 305.0
size_flags_horizontal = 3
script = null

[node name="version" type="Label" parent="Menu/otherParts/ButtonsList/ls"]
margin_top = 182.0
margin_right = 305.0
margin_bottom = 263.0
custom_fonts/font = SubResource( 3 )
text = "
CARAMEL PUBLISHING
Version 1.0"

[node name="Vide" type="HBoxContainer" parent="Menu/otherParts"]
visible = false
margin_left = 206.0
margin_right = 408.0
margin_bottom = 263.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="secondzone" type="HBoxContainer" parent="Menu/otherParts"]
margin_left = 309.0
margin_right = 615.0
margin_bottom = 263.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="mage" type="Sprite" parent="Menu/otherParts/secondzone"]
position = Vector2( 104.989, 120.258 )
scale = Vector2( 0.496686, 0.491281 )
texture = ExtResource( 8 )
flip_h = true
__meta__ = {
"_edit_group_": true
}

[node name="shadow" type="Sprite" parent="Menu/otherParts/secondzone/mage"]
self_modulate = Color( 0, 0, 0, 0.239216 )
show_behind_parent = true
position = Vector2( 6.48396, 14.1833 )
texture = ExtResource( 8 )
offset = Vector2( 2, 4 )
flip_h = true

[node name="sound1" type="Sprite" parent="Menu/otherParts/secondzone"]
modulate = Color( 0.976471, 0.976471, 0.976471, 1 )
self_modulate = Color( 0.964706, 0.933333, 0.933333, 1 )
position = Vector2( 265.408, 107.984 )
scale = Vector2( 0.466979, 0.491507 )
texture = ExtResource( 9 )
script = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="Buttonsound1" type="Button" parent="Menu/otherParts/secondzone/sound1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -64.0
margin_right = -64.0
margin_bottom = -64.0
flat = true

[node name="fullscreen1" type="Sprite" parent="Menu/otherParts/secondzone"]
position = Vector2( 265.767, 188.02 )
scale = Vector2( 0.200467, 0.200467 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Buttonfull1" type="Button" parent="Menu/otherParts/secondzone/fullscreen1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -128.0
margin_right = -128.0
margin_bottom = -128.0
flat = true

[connection signal="pressed" from="Menu/otherParts/ButtonsList/ls/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Menu/otherParts/secondzone/sound1/Buttonsound1" to="Menu/otherParts/secondzone/sound1" method="_on_Buttonsound1_pressed"]
[connection signal="pressed" from="Menu/otherParts/secondzone/sound1/Buttonsound1" to="." method="_on_Buttonsound1_pressed"]
[connection signal="pressed" from="Menu/otherParts/secondzone/fullscreen1/Buttonfull1" to="." method="_on_Buttonfull1_pressed"]
